umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_benzene.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :aromatic [{:atoms [0 1 2 3 4 5]}]
      :atoms ["C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a"]
      :bonds [[0 1 "1#a"] [1 2 "1#a"] [2 3 "1#a"] [3 4 "1#a"] [4 5 "1#a"] [5 0 "1#a"]]}
    :success true}
  :counts {
    :output {
      :aromatic [{:atoms [0 1 2 3 4 5]}]
      :atoms ["C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a"]
      :bonds [[0 1 "1#a"] [1 2 "1#a"] [2 3 "1#a"] [3 4 "1#a"] [4 5 "1#a"] [5 0 "1#a"]]}
    :success true}}
