umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_biphenyl.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#v3#a" "1" "C#h#v2#a" "2" "C#h#v2#a" "3" "C#h#v2#a" "4" "C#h#v2#a" "5" "C#h#v2#a" "6" "C#v3#a" "7" "C#h#v2#a" "8" "C#h#v2#a" "9" "C#h#v2#a" "10" "C#h#v2#a" "11" "C#h#v2#a"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "1"] [4 5 "1"] [5 0 "1"] [6 7 "1"] [7 8 "1"] [8 9 "1"] [9 10 "1"] [10 11 "1"] [11 6 "1"] [0 6 "1"]] :aromatic [{:atoms [0 1 2 3 4 5]} {:atoms [6 7 8 9 10 11]}] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#v3#a" "1" "C#h#v2#a" "2" "C#h#v2#a" "3" "C#h#v2#a" "4" "C#h#v2#a" "5" "C#h#v2#a" "6" "C#v3#a" "7" "C#h#v2#a" "8" "C#h#v2#a" "9" "C#h#v2#a" "10" "C#h#v2#a" "11" "C#h#v2#a"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "1"] [4 5 "1"] [5 0 "1"] [6 7 "1"] [7 8 "1"] [8 9 "1"] [9 10 "1"] [10 11 "1"] [11 6 "1"] [0 6 "1"]] :aromatic [{:atoms [0 1 2 3 4 5]} {:atoms [6 7 8 9 10 11]}] :charge 0 :spin "#u0 #s1"}}}
