umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_dibenzofuran.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :aromatic-systems [
        {
          :atoms [0 1 2 3 4 5 6 7 8 9 10 11 12]
          :attrs "[1,1,1,1,1,1,2,1,1,1,1,1,1]"}]
      :atoms ["C#h" "C#h" "C#h" "C" "C" "C#h" "O#n" "C" "C#h" "C#h" "C#h" "C#h" "C"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 12 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 7 :single]
        [7 12 :single]
        [7 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :aromatic-systems [
        {
          :atoms [0 1 2 3 4 5 6 7 8 9 10 11 12]
          :attrs "[1,1,1,1,1,1,2,1,1,1,1,1,1]"}]
      :atoms ["C#h" "C#h" "C#h" "C" "C" "C#h" "O#n" "C" "C#h" "C#h" "C#h" "C#h" "C"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 12 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 7 :single]
        [7 12 :single]
        [7 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :aromatic-systems [
        {
          :atoms [0 1 2 3 4 5 6 7 8 9 10 11 12]
          :attrs "[1,1,1,1,1,1,2,1,1,1,1,1,1]"}]
      :atoms ["C#h" "C#h" "C#h" "C" "C" "C#h" "O#n" "C" "C#h" "C#h" "C#h" "C#h" "C"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 12 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 7 :single]
        [7 12 :single]
        [7 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :aromatic-systems [
        {
          :atoms [0 1 2 3 4 5 6 7 8 9 10 11 12]
          :attrs "[1,1,1,1,1,1,2,1,1,1,1,1,1]"}]
      :atoms ["C#h" "C#h" "C#h" "C" "C" "C#h" "O#n" "C" "C#h" "C#h" "C#h" "C#h" "C"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 12 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 7 :single]
        [7 12 :single]
        [7 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]]}
    :success true
    :tie-breaks []}}
