umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_f420.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :aromatic-systems [
        {
          :atoms [15 16 17 18 20 21 23 24 25 26 27 28 30 31]
          :attrs "[2,1,2,0,1,0,1,1,1,1,1,1,1,1]"}]
      :atoms [
        "C#h3"
        "C#h"
        "O#n2"
        "P"
        "O#n2"
        "O#h#n2"
        "O#n2"
        "C#h2"
        "C#h"
        "O#h#n2"
        "C#h"
        "O#h#n2"
        "C#h"
        "O#h#n2"
        "C#h2"
        "N"
        "C"
        "N#h"
        "C"
        "O#n2"
        "N#n"
        "C"
        "O#n2"
        "C"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "O#h#n2"
        "C#h"
        "C"
        "C"
        "O#n2"
        "N#h#n"
        "C#h"
        "C#h2"
        "C#h2"
        "C"
        "O#n2"
        "N#h#n"
        "C#h"
        "C#h2"
        "C#h2"
        "C"
        "O#n2"
        "O#h#n2"
        "C"
        "O#n2"
        "O#h#n2"
        "C"
        "O#n2"
        "O#h#n2"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :double]
        [3 5 :single]
        [3 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]
        [8 10 :single]
        [10 11 :single]
        [10 12 :single]
        [12 13 :single]
        [12 14 :single]
        [14 15 :single]
        [15 31 :single]
        [15 16 :single]
        [16 23 :single]
        [16 17 :single]
        [17 18 :single]
        [18 19 :double]
        [18 20 :single]
        [20 21 :single]
        [21 22 :double]
        [21 23 :single]
        [23 24 :single]
        [24 25 :single]
        [25 31 :single]
        [25 26 :single]
        [26 27 :single]
        [27 28 :single]
        [28 29 :single]
        [28 30 :single]
        [30 31 :single]
        [1 32 :single]
        [32 33 :double]
        [32 34 :single]
        [34 35 :single]
        [35 36 :single]
        [36 37 :single]
        [37 38 :single]
        [38 39 :double]
        [38 40 :single]
        [40 41 :single]
        [41 42 :single]
        [42 43 :single]
        [43 44 :single]
        [44 45 :double]
        [44 46 :single]
        [41 47 :single]
        [47 48 :double]
        [47 49 :single]
        [35 50 :single]
        [50 51 :double]
        [50 52 :single]]
      :stereo-atoms [
        {:attrs :ccw :ligands [0 2 32 [:h 1]] :site 1}
        {:attrs :cw :ligands [7 9 10 [:h 8]] :site 8}
        {:attrs :cw :ligands [8 11 12 [:h 10]] :site 10}
        {:attrs :cw :ligands [10 13 14 [:h 12]] :site 12}
        {:attrs :cw :ligands [34 36 50 [:h 35]] :site 35}
        {:attrs :cw :ligands [40 42 47 [:h 41]] :site 41}]}
    :success true
    :tie-breaks [0 7 14 17 20 36 37 42 43]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 ["C#h3#v#d0#t0#a!#m!" "C#h#n#v#d0#t0#a!#m!"]
      7 ["C#h2#v2#d0#t0#a!#m!" "C#n#v2#d0#t0#a!#m!"]
      14 ["C#h2#v2#d0#t0#a!#m!" "C#n#v2#d0#t0#a!#m!"]
      17 ["N#n#v2#d0#t0#a#m!" "N#h#v2#d0#t0#a2#m!"]
      20 ["N#n#v2#d0#t0#a#m!" "N#h#v2#d0#t0#a2#m!"]
      36 ["C#h2#v2#d0#t0#a!#m!" "C#n#v2#d0#t0#a!#m!"]
      37 ["C#h2#v2#d0#t0#a!#m!" "C#n#v2#d0#t0#a!#m!"]
      42 ["C#h2#v2#d0#t0#a!#m!" "C#n#v2#d0#t0#a!#m!"]
      43 ["C#h2#v2#d0#t0#a!#m!" "C#n#v2#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :aromatic-systems [
        {
          :atoms [15 16 17 18 20 21 23 24 25 26 27 28 30 31]
          :attrs "[2,1,2,0,1,0,1,1,1,1,1,1,1,1]"}]
      :atoms [
        "C#h3"
        "C#h"
        "O#n2"
        "P"
        "O#n2"
        "O#h#n2"
        "O#n2"
        "C#h2"
        "C#h"
        "O#h#n2"
        "C#h"
        "O#h#n2"
        "C#h"
        "O#h#n2"
        "C#h2"
        "N"
        "C"
        "N#h"
        "C"
        "O#n2"
        "N#n"
        "C"
        "O#n2"
        "C"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "O#h#n2"
        "C#h"
        "C"
        "C"
        "O#n2"
        "N#h#n"
        "C#h"
        "C#h2"
        "C#h2"
        "C"
        "O#n2"
        "N#h#n"
        "C#h"
        "C#h2"
        "C#h2"
        "C"
        "O#n2"
        "O#h#n2"
        "C"
        "O#n2"
        "O#h#n2"
        "C"
        "O#n2"
        "O#h#n2"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :double]
        [3 5 :single]
        [3 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]
        [8 10 :single]
        [10 11 :single]
        [10 12 :single]
        [12 13 :single]
        [12 14 :single]
        [14 15 :single]
        [15 31 :single]
        [15 16 :single]
        [16 23 :single]
        [16 17 :single]
        [17 18 :single]
        [18 19 :double]
        [18 20 :single]
        [20 21 :single]
        [21 22 :double]
        [21 23 :single]
        [23 24 :single]
        [24 25 :single]
        [25 31 :single]
        [25 26 :single]
        [26 27 :single]
        [27 28 :single]
        [28 29 :single]
        [28 30 :single]
        [30 31 :single]
        [1 32 :single]
        [32 33 :double]
        [32 34 :single]
        [34 35 :single]
        [35 36 :single]
        [36 37 :single]
        [37 38 :single]
        [38 39 :double]
        [38 40 :single]
        [40 41 :single]
        [41 42 :single]
        [42 43 :single]
        [43 44 :single]
        [44 45 :double]
        [44 46 :single]
        [41 47 :single]
        [47 48 :double]
        [47 49 :single]
        [35 50 :single]
        [50 51 :double]
        [50 52 :single]]
      :stereo-atoms [
        {:attrs :ccw :ligands [0 2 32 [:h 1]] :site 1}
        {:attrs :cw :ligands [7 9 10 [:h 8]] :site 8}
        {:attrs :cw :ligands [8 11 12 [:h 10]] :site 10}
        {:attrs :cw :ligands [10 13 14 [:h 12]] :site 12}
        {:attrs :cw :ligands [34 36 50 [:h 35]] :site 35}
        {:attrs :cw :ligands [40 42 47 [:h 41]] :site 41}]}
    :success true
    :tie-breaks [0 7 14 17 20 36 37 42 43]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 ["C#h#n#v#a!" "C#h3#v#a!"]
      7 ["C#n#v2#a!" "C#h2#v2#a!"]
      14 ["C#n#v2#a!" "C#h2#v2#a!"]
      17 ["N#n#v2#a" "N#h#v2#a2"]
      20 ["N#n#v2#a" "N#h#v2#a2"]
      36 ["C#n#v2#a!" "C#h2#v2#a!"]
      37 ["C#n#v2#a!" "C#h2#v2#a!"]
      42 ["C#n#v2#a!" "C#h2#v2#a!"]
      43 ["C#n#v2#a!" "C#h2#v2#a!"]}}}
