umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_furan.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :aromatic-systems [{:atoms [0 1 2 3 4] :attrs "[2,1,1,1,1]"}]
      :atoms ["O#n#v2#a2" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a"]
      :bonds [
        [0 1 :aromatic]
        [1 2 :aromatic]
        [2 3 :aromatic]
        [3 4 :aromatic]
        [0 4 :aromatic]]}
    :success true}
  :counts {
    :output {
      :aromatic-systems [{:atoms [0 1 2 3 4] :attrs "[2,1,1,1,1]"}]
      :atoms ["O#n#v2#a2" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a"]
      :bonds [
        [0 1 :aromatic]
        [1 2 :aromatic]
        [2 3 :aromatic]
        [3 4 :aromatic]
        [0 4 :aromatic]]}
    :success true}}
