umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_imidazole.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :aromatic [{:atoms [0 1 2 3 4]}]
      :atoms ["C#h#v2#a" "N#h#v2#a2" "C#h#v2#a" "C#h#v2#a" "N#n#v2#a"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :single] [4 0 :single]]}
    :success true}
  :counts {
    :output {
      :aromatic [{:atoms [0 1 2 3 4]}]
      :atoms ["C#h#v2#a" "N#h#v2#a2" "C#h#v2#a" "C#h#v2#a" "N#n#v2#a"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :single] [4 0 :single]]}
    :success true}}
